--- a/StudentMail/.project
+++ b/StudentMail/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>d9</name>
+	<name>StudentMail</name>
 	<comment></comment>
 	<projects>
 	</projects>
