--- a/StudentMail/pom.xml
+++ b/StudentMail/pom.xml
@@ -1,12 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>mainEx</groupId>
-  <artifactId>mainEx</artifactId>
-
-  
-  
+  <groupId>StudentMail</groupId>
+  <artifactId>StudentMail</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  
+
   <dependencies>
        <dependency>
            <groupId>com.sun.mail</groupId>
@@ -22,6 +21,7 @@
            <scope>provided</scope>
        </dependency>
   </dependencies>
+  
   
   <build>
     <sourceDirectory>src</sourceDirectory>
