--- a/d9/pom.xml
+++ b/d9/pom.xml
@@ -1,27 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>mainEx</groupId>
-  <artifactId>mainEx</artifactId>
-
-  
-  
+  <groupId>d9</groupId>
+  <artifactId>d9</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
-       <dependency>
-           <groupId>com.sun.mail</groupId>
-           <artifactId>javax.mail</artifactId>
-           <version>1.6.1</version>
-       </dependency>
-         
-
-       <dependency>
-           <groupId>org.projectlombok</groupId>
-           <artifactId>lombok</artifactId>
-           <version>1.18.16</version>
-           <scope>provided</scope>
-       </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.16</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
+  
+  
   
   <build>
     <sourceDirectory>src</sourceDirectory>
