--- a/mcdonaldKiosk/pom.xml
+++ b/mcdonaldKiosk/pom.xml
@@ -11,6 +11,22 @@
            <version>1.18.16</version>
            <scope>provided</scope>
      </dependency>
+     
+     <dependency>
+  		  <groupId>org.apache.poi</groupId>
+  		  <artifactId>poi-ooxml</artifactId>
+ 		  <version>4.1.2</version>
+	 </dependency>
+	
+
+	 <dependency>
+  		  <groupId>junit</groupId>
+ 		  <artifactId>junit</artifactId>
+  		  <version>4.13</version>
+  		  <scope>test</scope>
+	 </dependency>
+	
+	
   </dependencies>
   
   
