--- a/mcdonaldKiosk/pom.xml
+++ b/mcdonaldKiosk/pom.xml
@@ -26,9 +26,26 @@
   		  <scope>test</scope>
 	 </dependency>
 	
+	<dependency>
+ 	   <groupId>com.oracle</groupId>
+ 	   <artifactId>ojdbc6</artifactId>
+ 	   <version>11.2.0.3</version>
+	</dependency>
 	
   </dependencies>
   
+  <repositories>
+
+	<repository>
+
+		<id>Spring Plugins</id>
+
+		<url>http://repo.spring.io/plugins-release/</url>
+
+	</repository>
+
+</repositories>
+
   
   <build>
     <sourceDirectory>src</sourceDirectory>
