--- a/EnglishQuiz/.classpath
+++ b/EnglishQuiz/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/crobbitkent/java/poi-4.1.2/poi-ooxml-4.1.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
