--- a/SalaryProgram/pom.xml
+++ b/SalaryProgram/pom.xml
@@ -17,13 +17,13 @@
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
-           <version>1.18.16</version>
+           <version>1.18.12</version>
            <scope>provided</scope>
        </dependency>
        
     <dependency>
   		  <groupId>org.apache.poi</groupId>
-  		  <artifactId>poi-ooxml</artifactId>
+  		  <artifactId>poi</artifactId>
  		  <version>4.1.2</version>
 	</dependency>
 	
